--- a/app/templates/sections/services.html
+++ b/app/templates/sections/services.html
@@ -30,7 +30,7 @@
             <div class="w-[2px] h-[200px] bg-black mx-[10px]"></div>
 
             <div class="flex flex-col leading-tight">
-                <span class="text-5xl font-faustina font-bold">Men's Haircut</span>
+                <span class="text-5xl font-faustina font-bold">Regular Haircut</span>
                 <span class="text-sm font-faustina text-gray-500">
                    Upgrade your look with a haircut designed for your lifestyle and personality.</span>
                     <span class="text-lg font-faustina font-semibold mt-2">₱ 250.00 </span>
