--- a/app/templates/emel-services.html
+++ b/app/templates/emel-services.html
@@ -50,13 +50,13 @@
                     class="w-[45px] h-[45px] object-contain ml-3 transition-all duration-700 ease-in-out group-hover:-translate-x-10 group-hover:opacity-0">
                 <div class="w-[2px] h-full bg-black mx-4 transition-all duration-700 ease-in-out group-hover:-translate-x-10 group-hover:opacity-0"></div>
                 <div class="relative flex flex-col leading-tight transition-all duration-700 ease-in-out group-hover:-translate-x-16 group-hover:opacity-0">
-                  <span class="text-xl font-faustina font-bold mb-[-6px]">Men's Haircut</span>
+                  <span class="text-xl font-faustina font-bold mb-[-6px]">Regular Haircut</span>
                   <span class="text-base font-faustina font-normal">₱ 250</span>
                 </div>
                 <div class="absolute top-1/2 left-full -translate-y-1/2 inline-flex items-center opacity-0 whitespace-nowrap
                             transition-all duration-700 ease-in-out
                             group-hover:left-1/2 group-hover:-translate-x-1/2 group-hover:opacity-100">
-                  <span class="text-2xl font-faustina font-bold">Men's Haircut</span>
+                  <span class="text-2xl font-faustina font-bold">Regular Haircut</span>
                 </div>
               </div>
               </a>
